--- a/shared-notes-software-server/shared-notes-software-server/appsettings.json
+++ b/shared-notes-software-server/shared-notes-software-server/appsettings.json
@@ -1,9 +1,30 @@
 {
+  "ConnectionStrings": {
+    "PostgresDb": "Host=localhost;Port=5432;Database=shared_notes_db;Username=postgres;Password=Sailendra@9083"
+  },
+
+  "Jwt": {
+    "Key": "YourSuperSecureSecretKeyHere!ChangeIt",
+    "Issuer": "OfficeConnect",
+    "Audience": "OfficeConnectClient",
+    "AccessTokenExpiryMinutes": 200,
+    "RefreshTokenExpiryDays": 30
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5171"
+      }
+    }
+  },
+
   "AllowedHosts": "*"
 }
