--- a/shared-notes-software/package.json
+++ b/shared-notes-software/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
