--- a/shared-notes-software/package.json
+++ b/shared-notes-software/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@tiptap/core": "^3.19.0",
+    "@tiptap/extension-color": "^3.19.0",
+    "@tiptap/extension-highlight": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/extension-table": "^2.1.13",
+    "@tiptap/extension-table-cell": "^2.1.13",
+    "@tiptap/extension-table-header": "^2.1.13",
+    "@tiptap/extension-table-row": "^2.1.13",
     "@tiptap/extension-task-item": "^3.19.0",
     "@tiptap/extension-task-list": "^3.19.0",
     "@tiptap/extension-text-align": "^3.19.0",
+    "@tiptap/extension-text-style": "^3.19.0",
     "@tiptap/extension-underline": "^3.19.0",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
@@ -25,10 +32,6 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "@tiptap/extension-table": "^2.1.13",
-    "@tiptap/extension-table-row": "^2.1.13",
-    "@tiptap/extension-table-cell": "^2.1.13",
-    "@tiptap/extension-table-header": "^2.1.13",
     "tippy.js": "^6.3.7"
   },
   "devDependencies": {
